--- a/app/src/main/assets/html/privacy.html
+++ b/app/src/main/assets/html/privacy.html
@@ -165,7 +165,7 @@
 <div class="layer-block whiteEdge"><h2 class="layer-title-bottom"></h2>
     <div class="layer-content"><h2 class="layer-title">《隐私政策》</h2>
         <div class="layer-inner"><p>宝讯（以下称“我们”）非常重视用户的隐私和个人信息安全保护，我们将按照法律法规要求，采取相应安全保护措施，尽力保护您的个人信息安全可控。</p>
-            <p>我们希望通过《隐私政策》（以下简称“本政策”）向您说明猪哥亮客户端（以下简称“本客户端”）如何收集、使用、存储和共享您的个人信息，以及您可以如何行使您的隐私权利。</p>
+            <p>我们希望通过《隐私政策》（以下简称“本政策”）向您说明牧草通客户端（以下简称“本客户端”）如何收集、使用、存储和共享您的个人信息，以及您可以如何行使您的隐私权利。</p>
             <p>请您在使用本客户端前，认真阅读并充分理解本《隐私政策》的全部内容，<b>特别是以字体加粗方式标识的内容。在阅读过程中如您对本政策内容有任何疑问、意见或建议，请联系我们。您使用或在我们更新本政策后继续使用我们的产品或服务，
                 即表示您同意本政策（含更新版本）内容，并且同意我们按照本政策收集、存储、使用和共享您的相关信息。</b>
             </p>
