--- a/app/src/main/assets/html/register_service.html
+++ b/app/src/main/assets/html/register_service.html
@@ -268,17 +268,17 @@
 <div class="content-box full">
     <div class="service-box">
         <div class="box">
-            <div class="service-title">猪哥亮注册协议</div>
+            <div class="service-title">牧运通注册协议</div>
             <div class="content-five">
                 <p>【审慎阅读】</p>
             </div>
             <div class="content-two">
                 <p><span class="divcss-aa">
-                    　●　本协议的内容只涉及服务于猪的养殖与交易服务，不涉及全面的畜牧业和广泛农业
+                    　●　本协议的内容只涉及服务于草的种植与交易服务，不涉及全面的畜牧业和广泛农业
                 </span>
                 </p>
                 <p><span class="divcss-aa">
-                    　●　针对面向农产品（畜产品）消费者的消费购买市场，我们将推出农安星网站和APP以及其他互联网终端服务形式。敬请期待！
+                    　●　针对面向农产品（畜产品）消费者的消费购买市场，我们将推出牧草通网站和APP以及其他互联网终端服务形式。敬请期待！
                 </span>
                 </p>
             </div>
@@ -303,7 +303,7 @@
             </div>
             <div class="content-two">
                 <p  style="color:#666666;">
-                    如您对协议有任何疑问，可向010-62961699猪哥亮服务中心咨询。
+                    如您对协议有任何疑问，可向010-62961699牧草通服务中心咨询。
                 </p>
             </div>
             <div class="content-five">
@@ -311,8 +311,8 @@
             </div>
 
             <div class="content-two">
-                <p  style="color:#666666;"> <span class="divcss-aa">您已充分理解，“猪哥亮”是一个由上海农惠通融数字科技有限公司开发并拥有完全自主知识产权的养猪产业综合服务商业平台（简称“猪哥亮平台”），服务对象为与养猪有关的各个环节的机构，而并非面向消费者的消费购买市场和个人服务，当您按照注册页面提示填写信息、阅读并同意协议且完成全部注册程序后，即表示您已充分阅读、理解并接受协议的全部内容，并将基于您的真实贸易需求而使用服务。</span>
-                    如您因使用猪哥亮提供的服务与 <span class="divcss-aa"> 上海农惠通融数字科技有限公司</span>发生争议，应适用《猪哥亮服务条款》处理；如您在使用猪哥亮服务中与其他用户发生争议，依您与其他用户达成的协议处理。
+                <p  style="color:#666666;"> <span class="divcss-aa">您已充分理解，“牧草通”是一个由上海农惠通融数字科技有限公司开发并拥有完全自主知识产权的养猪产业综合服务商业平台（简称“猪哥亮平台”），服务对象为与养猪有关的各个环节的机构，而并非面向消费者的消费购买市场和个人服务，当您按照注册页面提示填写信息、阅读并同意协议且完成全部注册程序后，即表示您已充分阅读、理解并接受协议的全部内容，并将基于您的真实贸易需求而使用服务。</span>
+                    如您因使用猪哥亮提供的服务与 <span class="divcss-aa"> 上海农惠通融数字科技有限公司</span>发生争议，应适用《牧草通服务条款》处理；如您在使用牧草通服务中与其他用户发生争议，依您与其他用户达成的协议处理。
                 </p>
             </div>
 
