--- a/app/src/main/assets/html/service.html
+++ b/app/src/main/assets/html/service.html
@@ -150,12 +150,12 @@
 <div class="layer-block whiteEdge">
     <div class="layer-content"><h2 class="layer-title">《服务协议》</h2>
         <div class="layer-inner"><p>
-            尊敬的用户，欢迎您使用北京宝讯智慧农业科技有限公司为您定制的“猪哥亮”手机客户端软件。“猪哥亮”将为您在畜牧业的生产经营与服务，提供全面的对接撮合服务，助力您在畜牧产业发展过程中，获取社会资源支持
+            尊敬的用户，欢迎您使用北京宝讯智慧农业科技有限公司为您定制的“牧草通”手机客户端软件。“牧草通”将为您在畜牧业的生产经营与服务，提供全面的对接撮合服务，助力您在畜牧产业发展过程中，获取社会资源支持
         。</p>
-            <p>本协议是您与北京宝讯智慧农业科技有限公司(以下简称 “宝讯”) 之间就使用“猪哥亮”客户端软件服务所订立的契约。在注册或通过您本人名下的手机登录本客户端软件前，请您仔细阅读本协议的全部内容，特别是协议中以加粗字体显示的内容，您应重点阅读。如您对协议有任何疑问，可向宝讯咨询。如果您不同意本协议或其中任何条款约定，请您立即停止注册或登录；您点击同意按钮后，本协议即构成对双方有约束力的法律文件。</p>
+            <p>本协议是您与北京宝讯智慧农业科技有限公司(以下简称 “宝讯”) 之间就使用“牧草通”客户端软件服务所订立的契约。在注册或通过您本人名下的手机登录本客户端软件前，请您仔细阅读本协议的全部内容，特别是协议中以加粗字体显示的内容，您应重点阅读。如您对协议有任何疑问，可向宝讯咨询。如果您不同意本协议或其中任何条款约定，请您立即停止注册或登录；您点击同意按钮后，本协议即构成对双方有约束力的法律文件。</p>
         </div>
         <div class="layer-inner"><h3>一、 定义</h3>
-            <p>1、本客户端：在本协议中除非专门指明或声明，均指由北京宝讯智慧农业科技有限公所有并负责运营的“猪哥亮”客户端软件。</p>
+            <p>1、本客户端：在本协议中除非专门指明或声明，均指由北京宝讯智慧农业科技有限公所有并负责运营的“牧草通”客户端软件。</p>
             <p>
                 2、所有权以及相关的权利：在本服务协议中，除非专门指明或声明，均意味着：第一，所有权；第二，知识产权，包括但不限于著作权、专利权、商标权、商业秘密等；第三，除上述权利之外的对物、信息及其载体和表现形式的使用、利用、传播、复制、发行、编辑、修改、处分等权利。</p>
             <p>3、用户：在本服务协议中，除非专门指明或声明，是指接受本服务协议的自然人、法人或其他组织。</p>
